--- a/binderhub/templates/page.html
+++ b/binderhub/templates/page.html
@@ -39,13 +39,13 @@
   {% block main %}
   {% endblock main %}
 
-  <!-- {% block footer %}
+  {% block footer %}
   <div class="container">
     <div class="row text-center">
       <h3>questions?<br />join the <a href="https://discourse.jupyter.org/c/binder">discussion</a>, read the <a href="https://mybinder.readthedocs.io/en/latest/">docs</a>, see the <a href="https://github.com/jupyterhub/binderhub">code</a></h3>
     </div>
   </div>
-  {% endblock footer %} -->
+  {% endblock footer %}
 
   {% if google_analytics_code %}
   <script>
