--- a/binderhub/templates/index.html
+++ b/binderhub/templates/index.html
@@ -26,9 +26,9 @@
       {% block form %}
       <form id="build-form" class="form jumbotron">
         <h4 id="form-header" class='row'>Build and launch a repository</h4>
-        <input type="hidden" id="provider_prefix" value="{{repo_providers.keys() | list | first}}"/> 
+        <input type="hidden" id="provider_prefix" value="{{repo_providers.keys() | list | last}}"/> 
         <div class="form-group row">
-          <label for="repository">{{(repo_providers.values() | list | first).labels.text}}</label>
+          <label for="repository">{{(repo_providers.values() | list | last).labels.text}}</label>
           <div class="input-group">
             <div class="input-group-btn" id="url-type-btn">
               <button type="button" class="btn btn-secondary dropdown-toggle"
@@ -36,7 +36,7 @@
                 title="Specify source of repository"
               >
               <span id="provider_prefix-selected">
-                {{(repo_providers.values() | list | first).display_name}}
+                {{(repo_providers.values() | list | last).display_name}}
               </span>
               <span class="caret"></span>
               </button>
@@ -53,7 +53,7 @@
         </div>
         <div class="form-row row">
           <div class="form-group col-md-4">
-            <label for="ref">{{(repo_providers.values() | list | first).labels.tag_text}}</label>
+            <label for="ref">{{(repo_providers.values() | list | last).labels.tag_text}}</label>
             <input class="form-control" type="text" id="ref" placeholder="HEAD"/>
           </div>
           <div class="form-group col-md-6">
