updated landing page

--- a/binderhub/templates/index.html
+++ b/binderhub/templates/index.html
@@ -15,7 +15,8 @@
       <div id="header" class="text-center">
         <h3>Turn a Git repo into a collection of interactive notebooks</h3>
         <div id="explanation">
-          Have a repository full of Jupyter notebooks? With Binder, open those notebooks in an executable environment, making your code immediately reproducible by anyone, anywhere.
+          At the CRC 1456, we provide a solution for converting your repositories into an executable environment, thus allowing general audience to 
+          reproduce your findings and to reuse your scripts. The CRC 1456 Binderhub servers provides CRC 1456 members with a powerful tool to promote open and FAIR research data access.
         </div>
       </div>
       <div id="tutorials" class="text-center">
